non-msrv-tests/tests/ui/option.stderr
error: unexpected option syntax
 --> tests/ui/option.rs:7:31
  |
7 | struct StructNoOption<T, U>(#[derive_where] T, PhantomData<U>);
  |                               ^^^^^^^^^^^^

error: unexpected option syntax
  --> tests/ui/option.rs:11:34
   |
11 | struct StructWrongSyntax<T, U>(#[derive_where = "default"] T, PhantomData<U>);
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^

error: unexpected option syntax
  --> tests/ui/option.rs:16:4
   |
16 |     #[derive_where]
   |       ^^^^^^^^^^^^

error: unexpected option syntax
  --> tests/ui/option.rs:24:4
   |
24 |     #[derive_where = "default"]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^

error: unknown option
  --> tests/ui/option.rs:31:49
   |
31 | struct StructInvalidOption<T, U>(#[derive_where(option)] T, PhantomData<U>);
   |                                                 ^^^^^^

error: unknown option
  --> tests/ui/option.rs:36:17
   |
36 |     #[derive_where(option)]
   |                    ^^^^^^
